# julianaklulo.github.io

./: .gitignore  CNAME  clockwise.html  conf.py  curso.html  eventos.html  index.html  interactive-games.html  lista.html  minion.html  params.json  presentations.html  pyladies.html  pyproject.toml  refer.html  repos.html  robots.txt  rss.xml  sitemap.xml  sitemapindex.xml  talks.html
.github/workflows/: build-and-publish.yml
assets/css/: lanyon.css  main.css  poole.css
blog/: index.html
categories/: index.html
css/: berry.css
en/: index.html  rss.xml
en/blog/: index.html
en/categories/: index.html
en/pages/presentations/: index.html  index.md
en/posts/2025/09/07/welcome/: index.html  index.md
en/posts/2025/09/07/wificom/: index.html  index.md
en/pt_br/: index.html
julianaklulo/: conf.py
julianaklulo/pages/: talks.pt_br.md
julianaklulo/themes/lanyon/templates/: archive.tmpl  index.tmpl
pages/: talks.pt_br.md
pages/apresentações/: index.html
posts/2025/09/07/: bem-vindo.md  wificom.en.md
posts/2025/09/07/bem-vindo/: index.html  index.md
posts/2025/09/07/wificom/: index.html  index.md
pt_br/: index.html  rss.xml
pt_br/blog/: index.html
pt_br/categories/: index.html
pt_br/pages/apresentações/: index.html
pt_br/pt_br/: index.html
themes/lanyon/templates/: archive.tmpl  base.tmpl  base_footer.tmpl  base_header.tmpl  index.tmpl  post_header.tmpl
