[project]
name = "julianaklulo-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "Juliana Karoline",email = "julianaklulo@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "nikola[extras] (>=8.3.3,<9.0.0)"
]

[tool.poetry]
packages = [{include = "julianaklulo"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
